# invenio-app-ils

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .prettierignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CODEOWNERS  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  docker-compose.full.yml  docker-compose.yml  docker-services.yml  jsconfig.json  package-lock.json  pytest.ini  requirements-devel.txt  requirements.txt  run-style-checks.sh  run-tests-style.sh  run-tests.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: pypi-release.yml  tests.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf  test.crt
docker/frontend/conf.d/: default.conf
docker/haproxy/: Dockerfile  haproxy.cfg  haproxy_cert.pem
docker/lb/: Dockerfile  haproxy.cfg
docker/nginx/: Dockerfile  nginx.conf  test.key
docker/nginx/conf.d/: default.conf
docker/postgres/: Dockerfile  init-app-db.sh
docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_app_ils/: __init__.py  anonymization.py  api.py  bundles.py  cli.py  config.py  errors.py  event_builders.py  ext.py  facets.py  fetchers.py  indexer.py  jwt.py  minters.py  permissions.py  proxies.py  search.py  search_permissions.py  signals.py  version.py  views.py  webpack.py
invenio_app_ils/acquisition/: __init__.py  api.py  config.py  errors.py  ext.py  indexer.py  models.py  proxies.py  search.py  views.py
invenio_app_ils/acquisition/jsonresolvers/: __init__.py  order_order_lines.py  order_provider.py  order_vendor.py
invenio_app_ils/acquisition/loaders/: __init__.py
invenio_app_ils/circulation/: __init__.py  api.py  config.py  errors.py  indexer.py  models.py  receivers.py  resolver.py  search.py  tasks.py  utils.py  views.py
invenio_app_ils/closures/: __init__.py  api.py  tasks.py  views.py
invenio_app_ils/demo_data/: documents.json  items.json
invenio_app_ils/document_requests/: __init__.py  api.py  indexer.py  models.py  search.py  validator.py  views.py
invenio_app_ils/documents/: __init__.py  api.py  covers_builder.py  indexer.py  models.py  search.py  utils.py
invenio_app_ils/eitems/: __init__.py  api.py  indexer.py  models.py  search.py
invenio_app_ils/files/: __init__.py  receivers.py  views.py
invenio_app_ils/ill/: __init__.py  api.py  config.py  errors.py  ext.py  indexer.py  models.py  proxies.py  search.py  views.py
invenio_app_ils/internal_locations/: __init__.py  api.py  indexer.py  models.py  search.py
invenio_app_ils/items/: __init__.py  api.py  indexer.py  models.py  search.py
invenio_app_ils/jsonresolver/: api.py
invenio_app_ils/literature/: __init__.py  api.py  covers_builder.py  search.py
invenio_app_ils/locations/: __init__.py  api.py  indexer.py  models.py  receivers.py  search.py
invenio_app_ils/mail/: __init__.py  admin.py  factory.py  loader.py  messages.py  models.py  tasks.py  utils.py  views.py
invenio_app_ils/mappings/: __init__.py
invenio_app_ils/notifications/: __init__.py  admin.py  api.py  messages.py  models.py  tasks.py  views.py
invenio_app_ils/patrons/: __init__.py  anonymization.py  api.py  cli.py  indexer.py  search.py  views.py
invenio_app_ils/pid/: providers.py
invenio_app_ils/pidstore/: __init__.py  fetchers.py  minters.py  pids.py  providers.py
invenio_app_ils/providers/: __init__.py  api.py  config.py  errors.py  ext.py  indexer.py  proxies.py  search.py
invenio_app_ils/records/: __init__.py  api.py  listeners.py  metadata_extensions.py  permissions.py  receivers.py  related.py  validator.py  views.py
invenio_app_ils/records_relations/: __init__.py  api.py  indexer.py  retriever.py  views.py
invenio_app_ils/relations/: api.py  nodes.py
invenio_app_ils/schemas/: json.py
invenio_app_ils/search/: __init__.py  api.py  permissions.py
invenio_app_ils/series/: __init__.py  api.py  indexer.py  models.py  search.py
invenio_app_ils/static_pages/: search_guide.html
invenio_app_ils/stats/: __init__.py  event_builders.py  processors.py
invenio_app_ils/templates/: logged_out.html
invenio_app_ils/ui/: .env  .env.test  .eslintrc  .gitignore  Dockerfile  package-lock.json  package.json
invenio_app_ils/vocabularies/: __init__.py  api.py  cli.py  indexer.py  search.py
scripts/: bootstrap  build_assets  build_ui  celery  console  server  setup  update
tests/: __init__.py  conftest.py  helpers.py  test_facets.py  test_post_logout_redirect.py  test_version.py
tests/api/: __init__.py  conftest.py  helpers.py  test_apis.py  test_circulation_utils.py  test_covers_builder.py  test_document_loan_request.py  test_document_requests.py  test_document_resolvers.py  test_errors.py  test_facets.py  test_files.py  test_item_loan_create.py  test_item_loan_request.py  test_item_permissions_endpoint.py  test_item_update.py  test_keywords.py  test_loaders.py  test_loan_checkout.py  test_loan_document_resolver.py  test_loan_item_permissions.py  test_loan_item_resolver.py  test_loan_list_permissions.py  test_loan_request.py  test_mails.py  test_permissions.py  test_record_delete.py  test_record_permissions.py  test_record_relations.py  test_related.py  test_serializer.py  test_stats.py  test_tags.py
tests/data/: acq_orders.json  acq_orders_histogram.json  acq_providers.json  acq_vendors.json  document_requests.json  document_requests_histogram.json  documents.json  eitems.json  ill_borrowing_requests.json  ill_libraries.json  ill_providers.json  internal_locations.json  items.json  keywords.json  loans.json  loans_histogram.json  loans_most_loaned.json  locations.json  series.json  tags.json
tests/e2e/: conftest.py  test_front_page.py
tests/ui/: conftest.py  test_views.py
ui/: .env.development  .gitignore  craco.config.js  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.js  history.js  index.js  override.js  setupTests.js  store.js
(+3441 files in other folders)
